# apod_api

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apod_api.sln  apod_api.vcxproj  apod_api.vcxproj.filters
src/: app.cpp  app.h  component.hpp  error_handler.cpp  error_handler.hpp  main.cpp  server_components.hpp  swagger_component.hpp
src/Logger/: logger.cpp  logger.h
src/client/: remote_client.hpp
src/controller/: api_controller.cpp  api_controller.hpp
src/dto/: dtos.hpp
